# kcm-papirus-folders

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  PapirusFolderSettings.cpp  PapirusFolderSettings.h  kcm_papirus_folders.json  kcm_papirus_folders_config.kcfg  kcm_papirus_folders_config.kcfgc  papirus_folders.notifyrc
src/ui/: main.qml
